--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -8,3 +8,4 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
