add nice oled repo

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,11 +1,22 @@
-# Uncomment to enable encoder
+# Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Uncomment the following line to enable the Lily58 OLED Display
-CONFIG_ZMK_DISPLAY=y
+# Randoms
 CONFIG_ZMK_POINTING=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Battery saving stuff
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+# Display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# Nice oled settings
+CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE=y        #y
+CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE_MAX=150  #100
+CONFIG_NICE_OLED_GEM_ANIMATION=y                        #y
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=960                   #960
