add nice oled repo

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -16,7 +16,11 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Nice oled settings
-CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE=y        #y
-CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE_MAX=150  #100
-CONFIG_NICE_OLED_GEM_ANIMATION=y                        #y
-CONFIG_NICE_OLED_GEM_ANIMATION_MS=960                   #960
+#default y
+CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE=y
+#default 100
+CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE_MAX=150
+#default y
+CONFIG_NICE_OLED_GEM_ANIMATION=y
+#default 960
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=960
