--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -13,14 +13,15 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n	
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Nice oled settings
 #default y
-CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE=y
+#CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE=y
 #default 100
-CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE_MAX=150
+#CONFIG_NICE_OLED_GEM_ANIMATION_WPM_FIXED_RANGE_MAX=150
 #default y
-CONFIG_NICE_OLED_GEM_ANIMATION=y
+#CONFIG_NICE_OLED_GEM_ANIMATION=y
 #default 960
-CONFIG_NICE_OLED_GEM_ANIMATION_MS=960
+#CONFIG_NICE_OLED_GEM_ANIMATION_MS=960
